[tool.poetry]
name = "pnet-reinforce"
version = "0.1.0"
description = ""
authors = ["Israel Rescalvo <israelrescalvo@outlook.com>"]
readme = "README.md"
packages = [{include = "pnet_reinforce", from = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
torch = "^1.13.1"
numpy = "^1.24.1"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
scipy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
